chore: adds JDK 21 and model enable preview